<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_header_general">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/pref_title_dark_mode"
            app:summary="@string/pref_summary_dark_mode"
            app:defaultValue="false" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/pref_title_language"
            app:summary="@string/pref_summary_language"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/pref_title_notifications"
            app:summary="@string/pref_summary_notifications"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_data">

        <Preference
            app:key="clear_cache"
            app:title="Clear Cache"
            app:summary="Free up local storage" />

        <Preference
            app:key="backup"
            app:title="@string/pref_title_backup"
            app:summary="@string/pref_summary_backup" />

        <Preference
            app:key="restore"
            app:title="@string/pref_title_restore"
            app:summary="@string/pref_summary_restore" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_about">

        <Preference
            app:key="join_community"
            app:title="Join Community"
            app:summary="Join our Telegram for updates" />

        <Preference
            app:key="privacy_policy"
            app:title="@string/pref_title_privacy" />

        <Preference
            app:key="terms"
            app:title="@string/pref_title_terms" />

        <Preference
            app:key="rate_app"
            app:title="@string/pref_title_rate" />

        <Preference
            app:key="share_app"
            app:title="@string/pref_title_share" />

        <Preference
            app:key="contact_us"
            app:title="@string/pref_title_contact" />

        <Preference
            app:key="version"
            app:title="App Version"
            app:summary="1.0.0" />

    </PreferenceCategory>

</PreferenceScreen>
