<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/quizSetupFragment"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/quiz" />
    <item
        android:id="@+id/learnFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/learn" />
    <item
        android:id="@+id/notesFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/notes" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
